# Cplex

./: .gitignore  01_BUILD_AND_RUN.md  03_COMPILER_BRIDGE.md  04_CPL_SUPPORT.md  05_TROUBLESHOOTING.md  06_TEST_PLAN.md  07_ROADMAP.md  08_STUDIO_SHELL.md  Cargo.toml  EXPERT_ROLES.md  LICENSE  README.md  main.slint  run_linux.sh  run_windows.bat  test_bridge.sh
docs/: 00_OVERVIEW.md  02_ARCHITECTURE.md
examples/: hello_danish.cpl
python_bridge/: chromaplex_bridge.py
src/: main.rs
