[package]
name = "chromaplex-editor"
version = "0.2.0"
edition = "2021"
description = "Linux-first, Windows-compatible Rust + Slint editor for ChromaPlex CPL"
license = "MIT"

[dependencies]
anyhow = "1"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = "1"

[build-dependencies]
slint-build = "1"
